--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "arduino-greenhouse-client-vue",
-  "version": "0.0.1",
+  "name": "arduino-greenhouse-client",
+  "version": "0.0.2",
+  "author": "filipkrajcovic",
   "private": true,
   "scripts": {
     "dev": "vite",
