integracia na mqtt

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@ VITE_FIREBASE_AUTH_DOMAIN=arduino-d08f9.firebaseapp.com
 VITE_FIREBASE_STORAGE_BUCKET=arduino-d08f9.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=798189242791
 VITE_FIREBASE_MEASUREMENT_ID=G-LJ5VZC2ZLJ
+
+VITE_MQTT_BROKER_URL=tls://59853d6fd020435c9d350fada6b4ca3c.s2.eu.hivemq.cloud
+VITE_MQTT_PATH=/mqtt
+VITE_MQTT_PORT=8884
+VITE_MQTT_PROTOCOL=wss
+VITE_MQTT_USERNAME=admin
+VITE_MQTT_PASSWORD=LT7pJz4NT9A88
