--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "firebase": "^9.23.0",
+    "mqtt": "^5.0.2",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
     "vuefire": "^3.1.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.17",
@@ -31,7 +33,9 @@
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "typescript": "~5.0.4",
+    "url": "^0.11.1",
     "vite": "^4.3.9",
     "vue-tsc": "^1.6.5"
   }
