--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ VITE_MQTT_PORT=8884
 VITE_MQTT_PROTOCOL=wss
 VITE_MQTT_USERNAME=admin
 VITE_MQTT_PASSWORD=LT7pJz4NT9A88
+
+VITE_APP_NAME=arduino
+VITE_LANGUAGE=sk
