--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "~5.0.4",
     "url": "^0.11.1",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.4",
     "vue-tsc": "^1.6.5"
   }
 }
