--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mqtt": "^5.0.2",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
+    "vue-content-loader": "^2.0.1",
     "vue-router": "^4.2.2",
     "vuefire": "^3.1.0"
   },
