--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@baloise/vue-keycloak": "^1.5.0",
+    "@vueuse/core": "^10.4.1",
     "firebase": "^9.23.0",
     "keycloak-js": "^20.0.1",
     "mqtt": "^5.0.2",
