changed mqtt broker to emqx

--- a/.env
+++ b/.env
@@ -6,12 +6,32 @@ VITE_FIREBASE_STORAGE_BUCKET=arduino-d08f9.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=798189242791
 VITE_FIREBASE_MEASUREMENT_ID=G-LJ5VZC2ZLJ
 
-VITE_MQTT_BROKER_URL=tls://59853d6fd020435c9d350fada6b4ca3c.s2.eu.hivemq.cloud
+# VITE_MQTT_BROKER_URL=tls://api.akenza.io/v3/data-streams
+# VITE_MQTT_PATH=/mqtt
+# VITE_MQTT_PORT=8884
+# VITE_MQTT_PROTOCOL=wss
+# VITE_MQTT_USERNAME=0785cb4bff923099
+# VITE_MQTT_PASSWORD=tal4sgdmbxdw6dgljlqwdjd8v3mo9i00
+
+VITE_MQTT_BROKER_URL=tls://broker.emqx.io
 VITE_MQTT_PATH=/mqtt
-VITE_MQTT_PORT=8884
+VITE_MQTT_PORT=8084
 VITE_MQTT_PROTOCOL=wss
-VITE_MQTT_USERNAME=admin
-VITE_MQTT_PASSWORD=LT7pJz4NT9A88
+VITE_MQTT_USERNAME=emqx
+VITE_MQTT_PASSWORD=public
+
+# VITE_MQTT_BROKER_URL=tls://59853d6fd020435c9d350fada6b4ca3c.s2.eu.hivemq.cloud
+# VITE_MQTT_PATH=/mqtt
+# VITE_MQTT_PORT=8884
+# VITE_MQTT_PROTOCOL=wss
+# VITE_MQTT_USERNAME=admin
+# VITE_MQTT_PASSWORD=LT7pJz4NT9A88
 
 VITE_APP_NAME=arduino
 VITE_LANGUAGE=sk
+
+
+#define SECRET_MQTT_HOST "mqtt.akenza.io"
+#define SECRET_MQTT_USERNAME "0785cb4bff923099"
+#define SECRET_MQTT_PASSWORD "tal4sgdmbxdw6dgljlqwdjd8v3mo9i00"
+#define SECRET_MQTT_OUT_TOPIC "/up/tal4sgdmbxdw6dgljlqwdjd8v3mo9i00/id/BD80439B277B163A"
