localization + styling PrimeVue

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ VITE_MQTT_PASSWORD=public
 # VITE_MQTT_PASSWORD=LT7pJz4NT9A88
 
 VITE_APP_NAME=arduino
-VITE_LANGUAGE=sk
+VITE_LANGUAGE=sk-SK
 
 
 #define SECRET_MQTT_HOST "mqtt.akenza.io"
