--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@baloise/vue-keycloak": "^1.5.0",
     "@vueuse/core": "^10.4.1",
+    "date-fns": "^3.3.1",
     "firebase": "^9.23.0",
     "keycloak-js": "^20.0.1",
     "mqtt": "^5.0.2",
@@ -22,11 +23,14 @@
     "primevue": "^3.45.0",
     "vue": "^3.3.4",
     "vue-content-loader": "^2.0.1",
+    "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.2",
+    "vue-timeago3": "^2.3.2",
     "vuefire": "^3.1.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.17",
@@ -34,11 +38,14 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.33",
     "prettier": "^2.8.8",
     "rollup-plugin-polyfill-node": "^0.12.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.0.4",
     "url": "^0.11.1",
     "vite": "^4.3.9",
