--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ VITE_MQTT_PORT=8084
 VITE_MQTT_PROTOCOL=wss
 VITE_MQTT_USERNAME=emqx
 VITE_MQTT_PASSWORD=public
+VITE_MQTT_CLIENT_ID=arduino_app
 
 # VITE_MQTT_BROKER_URL=tls://59853d6fd020435c9d350fada6b4ca3c.s2.eu.hivemq.cloud
 # VITE_MQTT_PATH=/mqtt
